WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199618
[Pointer Events] Scroll indicators should not show for scrollable content with touch-action: none
https://bugs.webkit.org/show_bug.cgi?id=199618
Summary
[Pointer Events] Scroll indicators should not show for scrollable content wit...
Antoine Quint
Reported
2019-07-09 07:19:17 PDT
[Pointer Events] Scroll indicators should not show for scrollable content with touch-action: none
Attachments
Patch
(8.81 KB, patch)
2019-07-09 07:25 PDT
,
Antoine Quint
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2019-07-09 07:25:18 PDT
Created
attachment 373714
[details]
Patch
Antoine Quint
Comment 2
2019-07-09 07:28:21 PDT
@smfr: is there a better way to determine a given UIGestureRecognizer is the pan gesture recognizer of a UIScrollView created by WebKit but isn't the WKWebView's UIScrollView's? Looking at its delegate's class works fine, but maybe there's a clearer way?
Simon Fraser (smfr)
Comment 3
2019-07-09 10:44:58 PDT
Comment on
attachment 373714
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=373714&action=review
> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:1402 > + if ([view isKindOfClass:[UIScrollView class]]) { > + if (auto* delegate = ((UIScrollView*)view).delegate) > + return [delegate isKindOfClass:[WKScrollingNodeScrollViewDelegate class]]; > + }
You could just check that the UIScrollView is a WKChildScrollView?
Antoine Quint
Comment 4
2019-07-09 11:44:06 PDT
Committed
r247265
: <
https://trac.webkit.org/changeset/247265
>
Radar WebKit Bug Importer
Comment 5
2019-07-09 11:45:37 PDT
<
rdar://problem/52844700
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug